# script-to-speech

./: .editorconfig  .env.example  .gitignore  .lintstagedrc.json  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  PACKAGE_RESTRUCTURE_PLAN.md  PRIVACY.md  README.md  build_backend.py  config.yaml  dialog_audio.py  elevenlabs_provider.py  elevenlabs_voice_library_manager.py  package.json  parsing3.py  parsing_utils.py  pnpm-lock.yaml  pnpm-workspace.yaml  processing_module.py  processing_submodule.py  pyproject.toml  pytest.ini  pyttsx3_provider.py  requirements.txt  run.txt  script_to_speech.py  sts-gui-backend.spec  tts_provider.py  voice_test.py
.github/workflows/: build-desktop.yml  deploy-website.yml
audio_generation/: download_manager.py  models.py  processing.py  reporting.py  utils.py
docs/: GUI_TECHNICAL.md  GUI_USER_GUIDE.md  LLM_VOICE_LABELING.md  PROCESSORS.md  PROVIDERS.md  RUN_MODES.md  STANDALONE_SPEECH.md  TEXT_PROCESSORS.md  TROUBLESHOOTING.md  TTS_PROVIDERS.md  VERSIONING.md  VOICE_LIBRARY_CONFIG.md  VOICE_LIBRARY_SCRIPTS.md
gui/: DESKTOP_APP_GUIDE.md  FIXES.md  TAURI_INTEGRATION_COMPLETE.md  TAURI_INTEGRATION_PROGRESS.md  WEB_DEVELOPMENT_STATUS.md  start_dev.sh  start_test.sh  test_gui.md
gui/backend/: README.md  package-lock.json  package.json  pyproject.toml  simple_test.py  test_backend.py  test_server.py
gui/backend/sts_gui_backend/: __init__.py  config.py  main.py
gui/backend/sts_gui_backend/routers/: voice_library.py
gui/backend/sts_gui_backend/services/: __init__.py  provider_service.py
gui/frontend/: .gitignore  .prettierignore  TANSTACK_QUERY_MIGRATION.md  eslint.config.js  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
gui/frontend/src/: App.tsx  config.ts  index.css  main.tsx  routeTree.gen.ts  router.tsx
gui/frontend/src-tauri/: Cargo.toml  Entitlements.plist  build.rs  tauri.conf.json
parser/: analyze.py  apply_text_processors.py  parser_utils.py  process.py  regression_check.py  screenplay_parser.py
parser/utils/: __init__.py  regression_checker.py  text_utils.py
scripts/: check_version_sync.py  pre-commit-entry.sh
src/script_to_speech/: script_to_speech.py
src/script_to_speech/audio_generation/: __init__.py  constants.py  download_manager.py  log_messages.py  models.py  processing.py  reporting.py  utils.py
src/script_to_speech/dummy_tts_backend/: __init__.py  backend.py
src/script_to_speech/gui_backend/: __init__.py  config.py  constants.py  main.py  models.py  simple_test.py  test_backend.py  test_server.py
src/script_to_speech/parser/: analyze.py  apply_text_processors.py  constants.py  process.py  regression_check.py  screenplay_parser.py
src/script_to_speech/text_processors/: processor_manager.py  utils.py
src/script_to_speech/tts_providers/: tts_provider_manager.py  utils.py
src/script_to_speech/utils/: audio_utils.py  batch_standalone_speech_generator.py  clipboard_cli.py  clipboard_utils.py  dialogue_stats_utils.py  dict_utils.py  env_utils.py  file_system_utils.py  generate_standalone_speech.py  (+2 more)
submodules/: skip_submodule.py  text_substitute_submodule.py
tests/: conftest.py  test_script_to_speech.py
tests/audio_generation/: test_cancellation.py  test_check_audio_silence.py  test_fetch_and_cache_audio.py  test_models.py  test_processing.py  test_reporting.py  test_utils.py
tests/dummy_tts_backend/: test_backend.py
tests/gui_backend/: conftest.py  test_models.py
tests/parser/: __init__.py  test_analyze.py  test_apply_text_processors.py  test_chunk_processing.py  test_parser_utils.py  test_process.py  test_regression_check.py  test_screenplay_parser.py  test_state_detection.py
tests/text_processors/: test_processor_manager.py
tests/tts_providers/: test_dummy_provider_override.py  test_tts_provider_manager_voice_library.py  test_utils.py
tests/utils/: test_audio_utils.py  test_batch_standalone_speech_generator.py  test_clipboard_cli.py  test_clipboard_utils.py  test_dialogue_stats_utils.py  test_dict_utils.py  test_env_utils.py  test_file_system_utils.py  test_file_system_utils_integration.py  test_generate_standalone_speech.py  test_generate_standalone_speech_sts_id.py  test_id3_tag_utils.py  test_logging.py  test_optional_config_generation.py
tests/voice_casting/: test_voice_casting.py  test_voice_library_casting_cli.py  test_voice_library_casting_utils.py
tests/voice_library/: test_cli.py  test_cli_config.py  test_cli_data.py  test_cli_run_script.py  test_cli_sort.py  test_cli_validate_scripts.py  test_fetch_available_voices.py  test_validator.py  test_voice_library.py  test_voice_library_config.py  test_voice_library_script_utils.py
text_processors/: processor_manager.py  text_preprocessor_base.py  text_processor_base.py  utils.py
text_processors/configs/: default_config.yaml
text_processors/preprocessors/: dual_dialog_preprocessor.py  extract_dialog_parentheticals_preprocessor.py  skip_and_merge_preprocessor.py  speaker_merge_preprocessor.py
text_processors/processors/: capitalization_transform_processor.py  pattern_replace_processor.py  skip_empty_processor.py  text_substitution_processor.py
tts_providers/: __init__.py  registered_tts_providers.py  registry.py  tts_provider_base.py  tts_provider_manager.py  utils.py
tts_providers/base/: common_provider_mixin.py  exceptions.py  stateful_tts_provider.py  tts_provider.py
tts_providers/dummy_common/: mixin.py
tts_providers/dummy_stateful/: tts_provider.py
tts_providers/dummy_stateless/: __init__.py  tts_provider.py
tts_providers/elevenlabs/: __init__.py  elevenlabs_tts_provider.py  tts_provider.py  voice_registry_manager.py
tts_providers/openai/: __init__.py  openai_tts_provider.py  tts_provider.py
tts_providers/pyttsx3/: __init__.py  pyttsx3_tts_provider.py
tts_providers/zonos/: __init__.py  tts_provider.py
utils/: audio_utils.py  generate_standalone_speech.py  id3_tag_utils.py  logging.py  optional_config_generation.py
website/: astro.config.mjs  package.json
website/.astro/: data-store.json  settings.json
website/public/: CNAME
(+470 files in other folders)
